<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tvStadium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stadium"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/ivBadge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:contentDescription="@string/team_badge" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>