<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTeamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Hello"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ScrollView
            android:id="@+id/svDescription"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTeamName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/tvTeamDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Hello"/>

        </ScrollView>

        <LinearLayout
            android:id="@+id/llYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/svDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_foundation_year"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/tvTeamYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Hello"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBadgeJersey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/llYear"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/ivBadgeDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/team_badge" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/ivJersey"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/team_jersey" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/tvEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/llBadgeJersey"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/next_events"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEvents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEvents"/>

        <TextView
            android:id="@+id/tvLinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rvEvents"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/links"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLinks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLinks"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>